--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^8.3.3"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.8"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
