modified:   .coverage 	renamed:    implementation_document.md -> Project Documents/implementation_document.md 	renamed:    project-specification.md -> Project Documents/project-specification.md 	renamed:    testing_document.md -> Project Documents/testing_document.md 	renamed:    week1_report.md -> Weekly Reports/week1_report.md 	renamed:    week2_report.md -> Weekly Reports/week2_report.md 	renamed:    week3_report.md -> Weekly Reports/week3_report.md 	renamed:    week4_report.md -> Weekly Reports/week4_report.md 	renamed:    week5_report.md -> Weekly Reports/week5_report.md 	modified:   __pycache__/test_generate.cpython-312-pytest-8.3.3.pyc 	new file:   __pycache__/test_generate.cpython-312.pyc 	modified:   pyproject.toml 	modified:   test_generate.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ package-mode = false
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 mido = "^1.3.3"
 pytest = "^8.3.3"
 
@@ -19,4 +19,7 @@ pytest-cov = "^6.0.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-
+[tool.coverage.run]
+include = [
+    "functions.py"
+    ]
