--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 python = "^3.9"
 mido = "^1.3.3"
 pytest = "^8.3.3"
+pygame = "^2.6.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.8"
