new file:   CoolSoft_VirtualMIDISynth_2.13.9.exe 	modified:   README.md 	modified:   __pycache__/functions.cpython-312.pyc 	modified:   functions.py 	modified:   main.py 	modified:   output.mid 	modified:   poetry.lock 	modified:   pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ package-mode = false
 python = "^3.9"
 mido = "^1.3.3"
 pytest = "^8.3.3"
-pygame = "^2.6.1"
+rtmidi = "^2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.8"
