--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ package-mode = false
 python = "^3.9"
 mido = "^1.3.3"
 pytest = "^8.3.3"
-rtmidi = "^2.5.0"
+python-rtmidi = "^1.5.8"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.8"
